# TruidIDE

./: .gitattributes  .gitmodules  .pnp.cjs  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  yarn.toml
plugins/: README.md
plugins/json-lsp/: truid-plugin.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  fs_utils.rs  lib.rs  main.rs  projects.rs  terminal.rs
src-tauri/src/plugins/: api.rs  lsp_host.rs  manifest.rs  mod.rs  registry.rs
src-tauri/src/templates/: README.md  basic_web_index.html  script.js  server.py  style.css  truid_api.js
tauri-plugin-file-picker/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-file-picker/android/: build.gradle.kts
tauri-plugin-file-picker/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-file-picker/android/src/main/java/com/plugin/filepicker/: Example.kt  ExamplePlugin.kt
tauri-plugin-file-picker/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-file-picker/examples/tauri-app/: package.json
tauri-plugin-file-picker/examples/tauri-app/src/: App.svelte
tauri-plugin-file-picker/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-file-picker/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-file-picker/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-file-picker/guest-js/: index.ts
tauri-plugin-file-picker/permissions/: default.toml
tauri-plugin-file-picker/permissions/autogenerated/: reference.md
tauri-plugin-file-picker/permissions/autogenerated/commands/: read_content_uri.toml
tauri-plugin-file-picker/permissions/schemas/: schema.json
tauri-plugin-file-picker/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-toast/: Cargo.toml  build.rs  package.json
(+44 files in other folders)
