[package]
name = "truidide"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "truidide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-file-picker = { path = "../tauri-plugin-file-picker" }
once_cell = "1.21.3"
portable-pty = { version = "0.9.0" }
tar = "0.4.44"
xz2 = "0.1.7"

tempfile = "3.10.1"
zip = "0.6.6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
tokio = { version = "1.39.3", features = ["process", "io-util", "macros", "sync", "rt", "rt-multi-thread", "time"] }
uuid = { version = "1.10.0", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
